--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="destinations.html">POPULAR DESTINATIONS</a></li>
                     <li><a href="traveltips.html">TRAVEL TIPS</a></li>
                     <li><a href="contacts.html">CONTACTS</a></li>
+                    <li><a href="contacts.html">CONTACTS</a></li>
                     
                 </ul>
             </div>
